--- a/data/pages/style.css
+++ b/data/pages/style.css
@@ -104,7 +104,7 @@ a.com span {
 	margin:0;
 	padding:0;
 	float:none;
-	width:670px;
+	width:1000px;
 }
 .content .mainbar img {
 	border:1px solid #d8dbdc;
@@ -178,4 +178,122 @@ a.com span {
 }
 .nrm {
     border: 1px solid #959595;
+}
+
+.table {
+    width:95%;
+    max-width:100%;
+    margin-bottom:18px;
+    border-collapse: collapse;
+    color: black
+}
+
+.table>thead>tr>th,.table>tbody>tr>th,.table>tfoot>tr>th,.table>thead>tr>td,.table>tbody>tr>td,.table>tfoot>tr>td {
+    padding:8px;
+    line-height:1.42857143;
+    vertical-align:top;
+    border-top:1px solid #ddd
+}
+
+.table>thead>tr>th {
+    vertical-align:bottom;
+    border-bottom:2px solid #ddd
+}
+
+.table>caption+thead>tr:first-child>th,.table>colgroup+thead>tr:first-child>th,.table>thead:first-child>tr:first-child>th,.table>caption+thead>tr:first-child>td,.table>colgroup+thead>tr:first-child>td,.table>thead:first-child>tr:first-child>td {
+    border-top:0
+}
+
+.table>tbody+tbody {
+    border-top:2px solid #ddd
+}
+
+.table .table {
+    background-color:#fff
+}
+
+.table-striped>tbody>tr:nth-child(odd) {
+    background-color:#f9f9f9
+}
+
+.btn {
+    display:inline-block;
+    margin-bottom:0;
+    font-weight:normal;
+    text-align:center;
+    vertical-align:middle;
+    -ms-touch-action:manipulation;
+    touch-action:manipulation;
+    cursor:pointer;
+    background-image:none;
+    border:1px solid transparent;
+    white-space:nowrap;
+    padding:6px 12px;
+    font-size:13px;
+    line-height:1.42857143;
+    border-radius:4px;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
+}
+
+.btn:focus,.btn:active:focus,.btn.active:focus,.btn.focus,.btn:active.focus,.btn.active.focus {
+    outline:thin dotted;
+    outline:5px auto -webkit-focus-ring-color;
+    outline-offset:-2px
+}
+
+.btn:hover,.btn:focus,.btn.focus {
+    color:#333;
+    text-decoration:none
+}
+
+.btn:active,.btn.active {
+    outline:0;
+    background-image:none;
+    -webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,0.125);
+    box-shadow:inset 0 3px 5px rgba(0,0,0,0.125)
+}
+
+.btn.disabled,.btn[disabled],fieldset[disabled] .btn {
+    cursor:not-allowed;
+    pointer-events:none;
+    opacity:.65;
+    filter:alpha(opacity=65);
+    -webkit-box-shadow:none;
+    box-shadow:none
+}
+
+.btn-success {
+    color:#fff;
+    background-color:#5cb85c;
+    border-color:#4cae4c
+}
+.btn-success:hover,.btn-success:focus,.btn-success.focus,.btn-success:active,.btn-success.active,.open>.dropdown-toggle.btn-success {
+    color:#fff;
+    background-color:#449d44;
+    border-color:#398439
+}
+.btn-success:active,.btn-success.active,.open>.dropdown-toggle.btn-success {
+    background-image:none
+}
+.btn-success.disabled,.btn-success[disabled],fieldset[disabled] .btn-success,.btn-success.disabled:hover,.btn-success[disabled]:hover,fieldset[disabled] .btn-success:hover,.btn-success.disabled:focus,.btn-success[disabled]:focus,fieldset[disabled] .btn-success:focus,.btn-success.disabled.focus,.btn-success[disabled].focus,fieldset[disabled] .btn-success.focus,.btn-success.disabled:active,.btn-success[disabled]:active,fieldset[disabled] .btn-success:active,.btn-success.disabled.active,.btn-success[disabled].active,fieldset[disabled] .btn-success.active {
+    background-color:#5cb85c;
+    border-color:#4cae4c
+}
+.btn-success .badge {
+    color:#5cb85c;
+    background-color:#fff
+}
+.btn-sm,.btn-group-sm>.btn {
+    padding:3px 8px;
+    font-size:10px;
+    line-height:1.5;
+    border-radius:3px
+}
+
+input {
+    border: 1px solid #ccc;
+    border-radius: 4px
 }
